--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Corner Discussion</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -29,8 +29,8 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Generic</a></li>
 											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="https://corner-front.onrender.com/signup">Sign Up</a></li>
+											<li><a href="https://corner-front.onrender.com/login">Log In</a></li>
 										</ul>
 									</div>
 								</li>
@@ -41,12 +41,10 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>Corner Discussion</h2>
+							<p>A dynamic platform empowering student-instructor engagement through real-time Q&A and centralized class announcements.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
+								<li><a href="https://corner-front.onrender.com/" class="button primary">GET STARTED WITH CORNER DISCUSSION</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
