--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Corner Discussion</h2>
-							<p>A dynamic platform empowering student-instructor engagement through real-time Q&A and centralized class announcements.</p>
+							<p>A dynamic platform empowering student-instructor engagement </p>
 							<ul class="actions special">
-								<li><a href="https://corner-front.onrender.com/" class="button primary">GET STARTED WITH CORNER DISCUSSION</a></li>
+								<li><a href="https://corner-front.onrender.com/" class="button primary">GET STARTED </a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
