Further temp customization

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Corner Discussion</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,7 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
+											<li><a href="generic.html">Features</a></li>
 											<li><a href="elements.html">Elements</a></li>
 											<li><a href="https://corner-front.onrender.com/signup">Sign Up</a></li>
 											<li><a href="https://corner-front.onrender.com/login">Log In</a></li>
@@ -42,7 +42,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Corner Discussion</h2>
-							<p>A dynamic platform empowering student-instructor engagement </p>
+							<p>A dynamic platform empowering student-instructor collaboration. </p>
 							<ul class="actions special">
 								<li><a href="https://corner-front.onrender.com/" class="button primary">GET STARTED </a></li>
 							</ul>
@@ -54,15 +54,14 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Real-Time Q&A</h2>
+								<p>Engage in real-time discussions with instructors and peers, ensuring timely responses and improved learning outcomes.Students can ask questions or post comments in real time, ensuring they get timely responses from their instructors.
+								Options for anonymity foster open communication.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fa-book major style1"><span class="label">Learning</span></span></li>
+								<li><span class="icon fa-comments major style2"><span class="label">Discussion</span></span></li>
+								<li><span class="icon solid fa-friends major style3"><span class="label">Collaboration</span></span></li>
 							</ul>
 						</div>
 					</section>
@@ -71,9 +70,9 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Centralized Announcements</h2>
+								<p>Corner eliminates inconsistencies in sharing class updates by providing a central, reliable space for announcements
+									accessible to all students.Stay informed with centralized class announcements, ensuring all students receive important information promptly.</p>
 							</div>
 						</section>
 						<section class="spotlight">
