More customization..addes pictures

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Features</a></li>
-											<li><a href="elements.html">Elements</a></li>
 											<li><a href="https://corner-front.onrender.com/signup">Sign Up</a></li>
 											<li><a href="https://corner-front.onrender.com/login">Log In</a></li>
 										</ul>
@@ -59,9 +58,9 @@
 								Options for anonymity foster open communication.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-book major style1"><span class="label">Learning</span></span></li>
-								<li><span class="icon fa-comments major style2"><span class="label">Discussion</span></span></li>
-								<li><span class="icon solid fa-friends major style3"><span class="label">Collaboration</span></span></li>
+								<li><span class="icon solid fa-question major style2"><span class="label">Learning</span></span></li>
+								<li><span class="icon solid fa-comment major style2"><span class="label">Discussion</span></span></li>
+								<li><span class="icon solid fa-users major style3"><span class="label">Collaboration</span></span></li>
 							</ul>
 						</div>
 					</section>
@@ -69,24 +68,24 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/announcement.jpg" alt="" /></div><div class="content">
 								<h2>Centralized Announcements</h2>
 								<p>Corner eliminates inconsistencies in sharing class updates by providing a central, reliable space for announcements
 									accessible to all students.Stay informed with centralized class announcements, ensuring all students receive important information promptly.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/feedback.jpg" alt="" /></div><div class="content">
+								<h2>Anonymous Feedback</h2>
+								<p>Corner provides a platform for students to express their thoughts and opinions anonymously, fostering a safe and open environment for sharing feedback.
+								Students can provide honest feedback without fear of retaliation, leading to more candid and valuable input.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/cutomizable.jpg" alt="" /></div><div class="content">
+								<h2>Customizable</h2>
+								<p>Corner is designed to be flexible and adaptable to various educational settings, ensuring it meets the unique needs of different courses and institutions.
+								Whether it's a discussion board, a Q&A section, or a combination of features, Corner can be tailored to meet the specific requirements of each educational context.</p>
 							</div>
 						</section>
 					</section>
@@ -95,34 +94,36 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Key Features</h2>
+								<p>Empowering both students and instructors with tools for success. Corner is designed to be flexible and adaptable to various educational settings, ensuring it meets the unique needs of different courses and institutions.</p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon solid fa-comments">
+									<h3>Interactive Discussions</h3>
+									<p>Facilitate discussions with advanced commenting and voting features. Students can ask questions or post comments in real time, ensuring they get timely responses from their instructors.
+									Options for anonymity foster open communication.</p>
 								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon solid fa-bullhorn">
+									<h3>Announcements</h3>
+									<p>Stay updated with the latest announcements from instructors. Instructors can share important information with students in one place, ensuring all students receive important information promptly.</p>
 								</li>
-								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon solid fa-chart-line">
+									<h3>Performance Insights</h3>
+									<p>Track progress and gain insights into engagement and performance. Instructors can monitor question volumes and respond promptly, ensuring a responsive learning environment.</p>
 								</li>
-								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon solid fa-lock">
+									<h3>Secure and Reliable</h3>
+									<p>Corner ensures the security and reliability of student data, implementing robust measures to protect sensitive information.
+									Instructors can focus on teaching without worrying about the security of their platform.</p>
 								</li>
-								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon solid fa-chart-line">
+									<h3>Data-Driven Insights</h3>
+									<p>Corner provides instructors with valuable insights into learner behavior and performance, enabling them to tailor teaching strategies and improve educational outcomes.Instructors gain valuable insights into student comprehension through data on question volume and trending topics,
+									helping to address learning gaps proactively.</p>
 								</li>
-								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon solid fa-cog">
+									<h3>Customizable Workflows</h3>
+									<p>Adapts to various educational settings, ensuring it meets the unique needs of different courses and institutions.</p>
 								</li>
 							</ul>
 						</div>
@@ -132,12 +133,12 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Ready to Transform Your Classroom?</h2>
+								<p>Corner Discussion is more than just a platform; it's a game-changer for student engagement and learning. Join us today and start empowering your students to thrive in the classroom.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="https://corner-front.onrender.com/signup" class="button fit primary">Get Started</a></li>
+								<li><a href="#one" class="button fit scrolly">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
@@ -152,7 +153,7 @@
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 2024 Corner Discussion.All rights reserved.</li>	
 						</ul>
 					</footer>
 
