--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="assets/css/images/favicon/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="assets/css/images/favicon/favicon.svg" />
+		<link rel="shortcut icon" href="assets/css/images/favicon/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="assets/css/images/favicon/apple-touch-icon.png" />
+		<link rel="manifest" href="assets/css/images/favicon/site.webmanifest" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="landing is-preload">
